--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "valaxy": "0.15.10",
+    "valaxy-addon-lightgallery": "^0.0.2",
+    "valaxy-addon-waline": "^0.1.1",
     "valaxy-theme-yun": "0.15.10"
   },
   "devDependencies": {
